--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -2,6 +2,7 @@
     display: flex;
     height: 100vh;
     justify-content: space-between;
+    overflow-y: hidden;
 }
 .exp-container1{
     display: flex;
