--- a/src/Components/Skill/Skill.css
+++ b/src/Components/Skill/Skill.css
@@ -22,6 +22,8 @@
     width: 70px;
 }
 
+
+
 .icons:hover {
     background-color: transparent;
     border-color: blanchedalmond;
@@ -66,4 +68,37 @@
 
 .subed h4{
     padding-top: 5px;
+}
+
+@media (max-width: 768px) {
+    .icons img{
+        height: 35px;
+        width: 35px;
+    }
+    .icons{
+        background-color: white;
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-width: 2px;
+        border-style: solid;
+        border-color: #b4b0ac;
+    }
+    .skillCard1 h1{
+        font-size: 20px;
+    }
+    .subed h4{
+        font-size: small;
+    }
+
+    .skillCard2{
+        display: flex;
+        width: 50%;
+        flex-wrap: wrap;
+        gap: 2%;
+    }
+
 }
