--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -17,9 +17,6 @@
     padding: 150px;
 }
 
-.div2{
-    margin-right: 150px;
-}
 
 .heading {
     font-size: 70px;
@@ -29,3 +26,29 @@
     font-size: 20px;
     font-weight: 500;
 }
+
+@media (max-width: 768px) {
+    .about-container{
+        flex-direction: column;
+        
+    }
+    .nani2-img{
+        height: 330px;
+        width: 330px;
+    }
+    .heading {
+        font-size: 35px;
+    }
+    .para1{
+        color: #30102c;
+        font-size: 15px;
+        font-weight: 500;
+    }
+    .div1{
+        padding: 40px;
+    }
+    .dv2{
+        margin-right: 0px;
+    }
+}
+
