--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -28,6 +28,8 @@
     width: 950px;
 }
 
+
+
 .naved{
     height: 100vh;
     width: 100%;
@@ -47,4 +49,13 @@
 
 .para2{
     font-size: 25px;
+}
+
+@media (max-width: 768px) {
+  .img1{
+    display: none;
+  }
+  .name-head{
+    font-size: 35px;
+  }
 }
